--- a/trunk/shamrock-web/pom.xml
+++ b/trunk/shamrock-web/pom.xml
@@ -68,12 +68,6 @@
       <groupId>org.apache.myfaces.tomahawk</groupId>
       <artifactId>tomahawk</artifactId>
       <version>${tomahawk.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jspapi</groupId>
-          <artifactId>jsp-api</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
@@ -190,6 +184,16 @@
 
 
     <plugins>
+
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>tomcat-maven-plugin</artifactId>
+          <version>1.0-alpha-1</version>
+          <configuration>
+            <url>http://glvnsjc.homedns.org:8080/manager</url>
+            <server>shamrock-demo-tomcat</server>
+          </configuration>
+        </plugin>
 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
