--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -221,11 +221,11 @@
         <version>1.3.4</version>
       </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core-tiger</artifactId>
-            <version>${spring.security.version}</version>
-	</dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core-tiger</artifactId>
+        <version>${spring.security.version}</version>
+      </dependency>
 	
       <!-- ================================================================== -->
       <!--  WEB                                                               -->
@@ -485,6 +485,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.2</version>
         <executions>
           <execution>
             <goals>
@@ -626,16 +627,16 @@
 
     <hsqldb.version>1.8.0.7</hsqldb.version>
     <derby.version>10.4.1.3</derby.version>
-    <spring.version>2.5.4</spring.version>
+    <spring.version>2.5.5</spring.version>
     <aspectj.version>1.6.0</aspectj.version>
     <jsfri.version>1.2_08</jsfri.version>
     <jsfmyfaces.version>1.2.1</jsfmyfaces.version>
     
-    <spring.security.version>2.0.2</spring.security.version>
+    <spring.security.version>2.0.4</spring.security.version>
     
     <log4j.version>1.2.8</log4j.version>
     <velocity.version>1.4</velocity.version>
-    <tomahawk.version>1.1.6</tomahawk.version>
+    <tomahawk.version>1.1.8</tomahawk.version>
     <javamail.version>1.4</javamail.version>
     <acegi.jsf.version>1.1.3</acegi.jsf.version>
     <jstl.standard.version>1.1.2</jstl.standard.version>
@@ -644,7 +645,7 @@
     <ajax4jsf.version>1.1.1</ajax4jsf.version>
     <sitemesh.version>2.2.1</sitemesh.version>
     <trinidad.version>1.2.8</trinidad.version>
-    <richfaces.version>3.2.1.GA</richfaces.version>
+    <richfaces.version>3.3.0.GA</richfaces.version>
     <commons-beanutils.version>1.7.0</commons-beanutils.version>
   </properties>
 
